--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
       "description": "JavaScript development environment Pluralsight course by Cory House",
     
       "scripts": {
+          "prestart": "node buildScripts/startMessage.js",
+          "start": "npm-run-all --parallel security-check open:src",
+          "open:src": "node buildScripts/srcServer.js",
+          "security-check": "nsp check",
+          "localtunnel": "lt --port 3000",
+          "share": "npm-run-all --parallel open:src localtunnel"
     
       },
     
-      "author": "Cory House",
+      "author": "Mark Gehrke",
     
       "license": "MIT",
     
