--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
           "prestart": "babel-node buildScripts/startMessage.js",
           "start": "npm-run-all --parallel security-check open:src lint:watch test:watch start-mockapi",
           "open:src": "babel-node buildScripts/srcServer.js",
-          "lint": "esw webpack.config.* src buildScripts --color",
+          "lint": "esw webpack.config.* src buildScripts",
           "lint:watch": "npm run lint -- --watch",
           "security-check": "nsp check",
           "localtunnel": "lt --port 3000",
@@ -18,17 +18,17 @@
           "test:watch": "npm run test -- --watch",
           "generate-mock-data": "babel-node buildScripts/generateMockData",
           "prestart-mockapi": "npm run generate-mock-data",
-          "start-mockapi": "json-server --watch src/api/db.json --port 3001"
+          "start-mockapi": "json-server --watch src/api/db.json --port 3001",
+          "clean-dist": "rimraf ./dist && mkdir dist",
+          "prebuild": "npm-run-all clean-dist test lint",
+          "build": "babel-node buildScripts/build.js",
+          "postbuild": "babel-node buildScripts/distServer.js"
       },
 
       "author": "Mark Gehrke",
-
       "license": "MIT",
-
       "dependencies": {
-
         "whatwg-fetch": "1.0.0"
-
       },
 
       "devDependencies": {
