--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
 
         "style-loader": "0.13.1",
 
+        "surge": "0.18.0",
+
         "webpack": "1.13.2",
 
         "webpack-dev-middleware": "1.8.4",
